# GoQuant-Project

./: .gitattributes  404.html  ADD_AUTHORIZED_PROGRAMS_GUIDE.md  Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  KEYPAIR_SETUP_GUIDE.md  PROGRAM_ID_EXPLANATION.md  README.md  SOL_TRANSFER_GUIDE.md  UPGRADE_AUTHORITY_FIX.md  WALLET_MANAGEMENT.md  WEBSOCKET_GUIDE.md  index.html  netlify.toml  package-lock.json  package.json  sitemap.xml  tsconfig.json  vercel.json
backend/: .env  Cargo.toml  DB_DIAGRAM_PROMPT.txt  DB_DIAGRAM_README.md  DEPLOY_DOCS.md  QUICK_DEPLOY.md  README.md  schema.dbml
backend/migrations/: 001_initial_schema.sql
backend/scripts/: build-docs.sh
backend/src/: main.rs
backend/src/api/: handlers.rs  mod.rs  routes.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs  models.rs  queries.rs
backend/src/models/: mod.rs  requests.rs  responses.rs
backend/src/services/: balance_tracker.rs  mod.rs  token_minter.rs  transaction_builder.rs  transaction_submitter.rs  vault_manager.rs  vault_monitor.rs
backend/src/solana/: mod.rs
backend/src/utils/: mod.rs
backend/src/websocket/: mod.rs
blog/: atom.xml  index.html  rss.xml
dashboard/: README.md  app.py  websocket_integration.py
markdown-page/: index.html
programs/collateral-vault/: Cargo.toml
programs/collateral-vault/src/: lib.rs
programs/collateral-vault/src/errors/: mod.rs
programs/collateral-vault/src/events/: mod.rs
programs/collateral-vault/src/instructions/: deposit.rs  initialize_vault.rs  initialize_vault_authority.rs  lock_collateral.rs  mod.rs  transfer_collateral.rs  unlock_collateral.rs  withdraw.rs
programs/collateral-vault/src/state/: mod.rs  vault.rs  vault_authority.rs
(+79 files in other folders)
