[package]
name = "collateral-vault"
version = "0.1.0"
description = "Collateral Vault Management System for Perpetual Futures DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "collateral_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

